
0.2:  First reasonably complete release

0.3:  Renamed from "tabular" to "tables", put on R-forge

0.4:  Added All(), Literal() and RowFactor()
      Added table_options() and booktabs() for booktabs support
      Gave different defaults for row label justification and data justification
      Suppress page breaks in RowFactor().
      Allow options to be set temporarily in latex() call.
      Added options to suppress parts of the output.

0.5:  Planned CRAN release of all of the above

0.6:  Fixed bug in column headings in print.tabular (reported by
      Tal Galili)
      Added Factor().
      Fixed bug with zero columns of row labels.
      Added levelnames argument to RowFactor and Factor to allow
        label customization.
      Added Multicolumn function.
      Added as.matrix(), write.csv.tabular() and write.table.tabular()
        (suggestions of Greg Snow).
      Added LaTeX escapes to text in the body or labels constructed by
	All() or the factor labels.  (Suggestion of Dieter Menne.)
      Added a caption to the longtable example.  (Suggestion of Dieter 
        Menne.)
      Added the version number to the vignette title page.
      Fixed RowFactor to add space before first row, not after 
        last row. (Bug report from Dieter Menne.)
      Made tabular() into a generic function.  (Suggestion of Hadley
        Wickham.)
      Added description of missing values to the vignette.
      Fixed handling of data with an Hmisc "labelled" class attached.
	(Reported by Thomas MacFarland.)
	
0.6.40:
      RowFactor now allows spacing=1.
      Specifications for justification in table_options() are now 
      recycled.
      Missing values were not handled correctly when computing counts,
      and when working with factors.  (Reported by Manuel Reif.)
      Added Percent() pseudo-function. 
      Cleaned up handling of row and column labels, especially in cases
      where rows with different column headings are summed.
      
      