@@ -1,0 +1,3 @@
+vignettes/tables.Rout.save
+vignettes/tables.blg
+vignettes/tables.bbl
